# inspect-podman

./: .gitignore  .pre-commit-config.yaml  GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
evals/: README.md
evals/file_listing/: file_listing.py
evals/file_listing_healthcheck/: compose.yaml  file_listing_healthcheck.py
evals/inspect_evals/: agentdojo.py  arc_challenge.py  arc_easy.py  bigcodebench.py  class_eval.py  cybench.py  gaia.py  gdm_in_house_ctf.py
src/inspect_podman/: __init__.py  cleanup.py  compose.py  config.py  inspect_evals.py  internal.py  podman.py  prereqs.py  providers.py  service.py  util.py
